[gd_scene load_steps=3 format=2]

[ext_resource path="res://components/chessboard.tscn" type="PackedScene" id=1]
[ext_resource path="res://screens/battle_screen.gd" type="Script" id=2]

[node name="HomeScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Chessboard" parent="." instance=ExtResource( 1 )]

[node name="IPLineEdit" type="LineEdit" parent="."]
margin_left = 1040.0
margin_top = 40.0
margin_right = 1272.0
margin_bottom = 96.0
text = "192.168.1.173"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostButton" type="Button" parent="."]
margin_left = 960.0
margin_top = 40.0
margin_right = 1032.0
margin_bottom = 96.0
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectButton" type="Button" parent="."]
margin_left = 1280.0
margin_top = 40.0
margin_right = 1408.0
margin_bottom = 96.0
text = "Connect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RepentButton" type="Button" parent="."]
margin_left = 960.0
margin_top = 224.0
margin_right = 1152.0
margin_bottom = 288.0
text = "Repent"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SyncButton" type="Button" parent="."]
margin_left = 960.0
margin_top = 320.0
margin_right = 1152.0
margin_bottom = 384.0
text = "Sync"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PassButton" type="Button" parent="."]
margin_left = 1216.0
margin_top = 791.0
margin_right = 1408.0
margin_bottom = 855.0
text = "Pass"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetButton" type="Button" parent="."]
margin_left = 1216.0
margin_top = 224.0
margin_right = 1408.0
margin_bottom = 288.0
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SendChatButton" type="Button" parent="."]
margin_left = 960.0
margin_top = 792.0
margin_right = 1152.0
margin_bottom = 856.0
text = "Send"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SwitchSideButton" type="Button" parent="."]
anchor_left = 0.687283
anchor_top = 0.164603
anchor_right = 0.687283
anchor_bottom = 0.164603
margin_left = 226.313
margin_top = -20.1428
margin_right = 418.313
margin_bottom = 43.8572
text = "Switch Side"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SideLabel" type="Label" parent="."]
anchor_left = 0.688692
anchor_top = 0.190579
anchor_right = 0.688692
anchor_bottom = 0.190579
margin_left = -23.7159
margin_top = -35.5214
margin_right = 104.284
margin_bottom = -11.5214
text = "Side: Black
Next: Black
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AutoSwitchSideCheckBox" type="CheckBox" parent="."]
anchor_left = 0.668056
anchor_top = 0.231111
anchor_right = 0.668056
anchor_bottom = 0.231111
margin_left = -2.0
margin_top = -40.0
margin_right = 171.0
margin_bottom = -16.0
text = "Switch side after move"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatLabel" type="RichTextLabel" parent="."]
margin_left = 959.0
margin_top = 448.0
margin_right = 1408.0
margin_bottom = 704.0
text = "Welcome to the game of Go!
"
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatLineEdit" type="LineEdit" parent="."]
anchor_left = 0.66696
anchor_top = 0.877151
anchor_right = 0.66696
anchor_bottom = 0.877151
margin_left = -0.421692
margin_top = -61.4358
margin_right = 447.578
margin_bottom = -16.4358
__meta__ = {
"_edit_use_anchors_": false
}
